--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
+@import "variebles";
+@import "date-block";
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: $calendar-size * 7 + 8px;
 }
